# cel-go-repro

./: BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
cel-test/: BUILD.bazel  lib.go
