module(
    name = "cel-go-repro",
    repo_name = "com_github_jarreds_cel_go_repro",
)

bazel_dep(
    name = "rules_go",
    version = "0.54.1",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")
go_sdk.download(version = "1.24.3")

bazel_dep(
    name = "gazelle",
    version = "0.43.0",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_google_cel_go")

# bazel_dep(
#     name = "grpc",
#     version = "1.72.0",
# )
